--- a/client/package.json
+++ b/client/package.json
@@ -12,7 +12,10 @@
   "dependencies": {
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-icons": "^5.3.0"
+    "react-dropdown": "^1.11.0",
+    "react-icons": "^5.3.0",
+    "react-router-dom": "^7.1.1",
+    "styled-components": "^6.1.13"
   },
   "devDependencies": {
     "@eslint/js": "^9.15.0",
