--- a/client/package.json
+++ b/client/package.json
@@ -23,6 +23,7 @@
     "react-helmet": "^6.1.0",
     "react-icons": "^5.3.0",
     "react-router-dom": "^7.1.1",
+    "socket.io-client": "^4.8.1",
     "styled-components": "^6.1.13"
   },
   "devDependencies": {
