--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,9 @@
     "@fortawesome/free-solid-svg-icons": "^6.7.2",
     "@fortawesome/react-fontawesome": "^0.2.2",
     "@heroicons/react": "^2.2.0",
+    "@radix-ui/react-avatar": "^1.1.2",
+    "@radix-ui/react-tooltip": "^1.1.7",
+    "@shadcn/ui": "^0.0.4",
     "axios": "^1.7.9",
     "js-cookie": "^3.0.5",
     "moment": "^2.30.1",
@@ -23,8 +26,10 @@
     "react-helmet": "^6.1.0",
     "react-icons": "^5.3.0",
     "react-router-dom": "^7.1.1",
+    "recharts": "^2.15.0",
     "socket.io-client": "^4.8.1",
-    "styled-components": "^6.1.13"
+    "styled-components": "^6.1.13",
+    "tailwind-variants": "^0.3.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.15.0",
@@ -38,6 +43,7 @@
     "eslint-plugin-react-refresh": "^0.4.14",
     "globals": "^15.12.0",
     "postcss": "^8.4.49",
+    "shadcn-ui": "^0.9.4",
     "tailwindcss": "^3.4.15",
     "vite": "^6.0.1"
   }
