--- a/client/package.json
+++ b/client/package.json
@@ -18,9 +18,11 @@
     "@radix-ui/react-tooltip": "^1.1.7",
     "@shadcn/ui": "^0.0.4",
     "axios": "^1.7.9",
+    "chart.js": "^4.4.7",
     "js-cookie": "^3.0.5",
     "moment": "^2.30.1",
     "react": "^18.3.1",
+    "react-chartjs-2": "^5.3.0",
     "react-dom": "^18.3.1",
     "react-dropdown": "^1.11.0",
     "react-helmet": "^6.1.0",
